<resources>
    <string name="app_name">Vehicle Registration Database</string>
    <string name="select">SELECT</string>
    <string name="vehicle">VEHICLE</string>
    <string name="owner">OWNER</string>
    <string name="insurance">INSURANCE</string>
    <string name="driver_s_license">DRIVER\'S LICENSE</string>
    <string name="insert">INSERT</string>
    <string name="edit">EDIT</string>
    <string name="VDetails">Insert Vehicle Details</string>
    <string name="VModel">Model</string>
    <string name="VType" />
    <string name="vType">Vehicle Type</string>
    <string name="purchaseDate">Date of Purchase</string>
    <string name="ownerAadhar">Owner\'s Aadhar Card No.</string>
    <string name="update">UPDATE</string>
    <string name="vno">Vehicle Number</string>
    <string name="updatevehicle">UPDATE VEHICLE DETAILS</string>
    <string name="deleteVehicle">DELETE VEHICLE DETAILS</string>
    <string name="delete">DELETE</string>
    <string name="oDetails">INSERT OWNER DETAILS</string>
    <string name="aadharNo">Aadhar Card Number</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="dob">Date of Birth</string>
    <string name="mob">Mobile Number</string>
    <string name="address">Address</string>
    <string name="updateo">UPDATE OWNER DETAILS</string>
    <string name="deleteOwner">DELETE OWNER DETAILS</string>
    <string name="dlDetails">Driver\'s License Details</string>
    <string name="insertDL">Insert License Details</string>
    <string name="dlNo">Driver\'s License Number</string>
    <string name="expDate">Expiry Date</string>
    <string name="editDL">Update License Details</string>
    <string name="deleteDL">Delete License Details</string>
    <string name="vehicleDetails">Vehicle Details</string>
    <string name="insuranceDetails">Insurance Details</string>
    <string name="InsertInsurance">Insert Insurance Details</string>
    <string name="amt">Amount</string>
    <string name="updateIns">Update Insurance Details</string>
    <string name="insNo">Insurance Number</string>
    <string name="deleteIns">Delete Insurance Details</string>
    <string name="oNo">Owner  ID</string>
    <string name="customQuery">Enter Custom Query</string>
    <string name="attributeList">Enter the list of Attributes</string>
    <string name="from">FROM</string>
    <string name="tables">Enter the list of Tables</string>
    <string name="where">WHERE</string>
    <string name="conditions">Enter the list of Conditions</string>
    <string name="enter">ENTER</string>
    <string name="date">Date</string>
</resources>